--- a/css/style.css
+++ b/css/style.css
@@ -336,7 +336,7 @@ hr{
 }
 
 .menu-list p{
-  font-size: 80%;
+  font-size: 90%;
   font-weight: 300;
 }
 
@@ -372,13 +372,15 @@ hr{
     position: relative;
 }
 
+
 .nav-pills-custom .nav-link.active {
     color: #45b649;
     background: #fff;
 }
 
 .menu-list img{
-  width: 90%;
+  width: 100%;
+  height: 90%;
 }
 
 @media only screen and (max-width: 768px) {
